# VTFLib-cmake

./: CMakeLists.txt
VTFCmd/: CMakeLists.txt
VTFCmd/include/: stdafx.h
VTFCmd/resources/: VTFCmd.rc
VTFCmd/src/: enumerations.c  vtfcmd.c
VTFEdit/: CMakeLists.txt
VTFEdit/include/: stdafx.h
VTFEdit/resources/: VTFEdit.rc
VTFEdit/src/: About.cpp  BatchConvert.cpp  VMTCreate.cpp  VTFEdit.cpp  VTFOptions.cpp  WADConvert.cpp
VTFLib/: CMakeLists.txt
VTFLib/include/: VTFFormat.h  VTFMathlib.h  stdafx.h
VTFLib/resources/: Resource.rc
VTFLib/src/: Error.cpp  FileReader.cpp  FileWriter.cpp  Float16.cpp  MemoryReader.cpp  MemoryWriter.cpp  Proc.cpp  ProcReader.cpp  ProcWriter.cpp  VMTFile.cpp  VMTGroupNode.cpp  VMTIntegerNode.cpp  VMTNode.cpp  VMTSingleNode.cpp  VMTStringNode.cpp  VMTValueNode.cpp  VMTWrapper.cpp  VTFFile.cpp  VTFLib.cpp  VTFMathlib.cpp  VTFWrapper.cpp
